updated mountain style css

--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -191,6 +191,12 @@ ol {
     padding-right: 5%;
 }
 
+.mountain {
+ 
+    height: 300px;
+    
+}
+
 .venus {
     height: 120px;
     float: right;
